Oops, used wrong branch

--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -176,8 +176,6 @@
         <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.NonHydrostaticTimeIntegrator2D.advance">(thetis.coupled_timeintegrator_2d.NonHydrostaticTimeIntegrator2D method)</a>
 </li>
         <li><a href="thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">(thetis.implicitexplicit.IMEXGeneric method)</a>
-</li>
-        <li><a href="thetis.html#thetis.rungekutta.DIRKGeneric.advance">(thetis.rungekutta.DIRKGeneric method)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ERKGenericShuOsher.advance">(thetis.rungekutta.ERKGenericShuOsher method)</a>
 </li>
@@ -2848,8 +2846,6 @@
       <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D.tracer_integrator">tracer_integrator() (thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D method)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_only">tracer_only (thetis.options.ModelOptions2d attribute)</a>
-</li>
-      <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_picard_iterations">tracer_picard_iterations (thetis.options.ModelOptions2d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_timestepper_options">tracer_timestepper_options (thetis.options.ModelOptions2d attribute)</a>
 </li>
