--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../_static/thetis.css" />
     <script data-url_root="../" id="documentation_options" src="../_static/documentation_options.js"></script>
