--- a/_modules/thetis/implicitexplicit.html
+++ b/_modules/thetis/implicitexplicit.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -121,9 +121,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="IMEXGeneric.advance"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_lagged</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">update_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
+<div class="viewcode-block" id="IMEXGeneric.advance"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="n">update_lagged</span> <span class="ow">and</span> <span class="n">update_fields</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">solve_stage</span><span class="p">(</span><span class="n">i</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">get_final_solution</span><span class="p">()</span></div>
