--- a/_modules/thetis/rungekutta.html
+++ b/_modules/thetis/rungekutta.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.rungekutta &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>thetis.rungekutta &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -483,9 +483,8 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">pass</span></div>
 
-<div class="viewcode-block" id="RungeKuttaTimeIntegrator.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.RungeKuttaTimeIntegrator.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_lagged</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">update_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
+<div class="viewcode-block" id="RungeKuttaTimeIntegrator.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.RungeKuttaTimeIntegrator.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="n">update_lagged</span> <span class="ow">and</span> <span class="n">update_fields</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_initialized</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solution</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
@@ -608,17 +607,7 @@
 <div class="viewcode-block" id="DIRKGeneric.solve_stage"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.DIRKGeneric.solve_stage">[docs]</a>    <span class="k">def</span> <span class="nf">solve_stage</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">i_stage</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Solve i-th stage and assign solution to :attr:`self.solution`.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solve_tendency</span><span class="p">(</span><span class="n">i_stage</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">update_solution</span><span class="p">(</span><span class="n">i_stage</span><span class="p">)</span></div>
-
-<div class="viewcode-block" id="DIRKGeneric.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.DIRKGeneric.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_lagged</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">update_lagged</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">NotImplementedError</span>  <span class="c1"># TODO: Support Picard iteration for DIRK timesteppers</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_initialized</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solution</span><span class="p">)</span>
-        <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">solve_stage</span><span class="p">(</span><span class="n">i</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">get_final_solution</span><span class="p">()</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">update_solution</span><span class="p">(</span><span class="n">i_stage</span><span class="p">)</span></div></div>
 
 
 <div class="viewcode-block" id="DIRKGenericUForm"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.DIRKGenericUForm">[docs]</a><span class="k">class</span> <span class="nc">DIRKGenericUForm</span><span class="p">(</span><span class="n">RungeKuttaTimeIntegrator</span><span class="p">):</span>
@@ -971,9 +960,8 @@
             <span class="k">if</span> <span class="n">i_stage</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span> <span class="o">-</span> <span class="mi">1</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">stage_sol</span><span class="p">[</span><span class="n">i_stage</span> <span class="o">+</span> <span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solution</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="ERKGenericShuOsher.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.ERKGenericShuOsher.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">update_lagged</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">update_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
+<div class="viewcode-block" id="ERKGenericShuOsher.advance"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.ERKGenericShuOsher.advance">[docs]</a>    <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="n">update_lagged</span> <span class="ow">and</span> <span class="n">update_fields</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">solve_stage</span><span class="p">(</span><span class="n">i</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span></div></div>
 
