--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search &#8212; Thetis 0+untagged.1736.gc23b50a documentation</title>
+    <title>Search &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     
