--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1731.g3dfe65d documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -126,6 +126,12 @@
 </li>
       <li><a href="thetis.html#thetis.callback.AccumulatorCallback">AccumulatorCallback (class in thetis.callback)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.TimeStepperOptions.ad_block_tag">ad_block_tag (thetis.options.TimeStepperOptions attribute)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.options.TimeStepperOptions3d.ad_block_tag">(thetis.options.TimeStepperOptions3d attribute)</a>
+</li>
+      </ul></li>
       <li><a href="thetis.html#thetis.callback.CallbackManager.add">add() (thetis.callback.CallbackManager method)</a>
 
       <ul>
@@ -194,6 +200,14 @@
         <li><a href="thetis.html#thetis.timeintegrator.SteadyState.advance">(thetis.timeintegrator.SteadyState method)</a>
 </li>
         <li><a href="thetis.html#thetis.timeintegrator.TimeIntegratorBase.advance">(thetis.timeintegrator.TimeIntegratorBase method)</a>
+</li>
+      </ul></li>
+      <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D.advance_picard">advance_picard() (thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.timeintegrator.CrankNicolson.advance_picard">(thetis.timeintegrator.CrankNicolson method)</a>
+</li>
+        <li><a href="thetis.html#thetis.timeintegrator.TimeIntegrator.advance_picard">(thetis.timeintegrator.TimeIntegrator method)</a>
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.utility3d.ALEMeshUpdater">ALEMeshUpdater (class in thetis.utility3d)</a>
@@ -1110,10 +1124,10 @@
       </ul></li>
       <li><a href="thetis.html#thetis.configuration.FiredrakeCoefficient">FiredrakeCoefficient (class in thetis.configuration)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.configuration.FiredrakeConstantTraitlet">FiredrakeConstantTraitlet (class in thetis.configuration)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.configuration.FiredrakeScalarExpression">FiredrakeScalarExpression (class in thetis.configuration)</a>
 </li>
       <li><a href="thetis.html#thetis.configuration.FiredrakeVectorExpression">FiredrakeVectorExpression (class in thetis.configuration)</a>
@@ -1139,6 +1153,8 @@
       <li><a href="thetis.html#thetis.configuration.FrozenConfigurable">FrozenConfigurable (class in thetis.configuration)</a>
 </li>
       <li><a href="thetis.html#thetis.configuration.FrozenHasTraits">FrozenHasTraits (class in thetis.configuration)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.TracerFieldOptions.function">function (thetis.options.TracerFieldOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.function_spaces">function_spaces (thetis.solver.FlowSolver attribute)</a>
 
@@ -2847,6 +2863,8 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_only">tracer_only (thetis.options.ModelOptions2d attribute)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_picard_iterations">tracer_picard_iterations (thetis.options.ModelOptions2d attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_timestepper_options">tracer_timestepper_options (thetis.options.ModelOptions2d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_timestepper_type">tracer_timestepper_type (thetis.options.ModelOptions2d attribute)</a>
@@ -3163,7 +3181,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.1.2.
     </div>
   </body>
 </html>
