--- a/_modules/thetis/implicitexplicit.html
+++ b/_modules/thetis/implicitexplicit.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1722.g494fc07 documentation</title>
+    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1731.gc2c1691.dirty documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -101,10 +101,12 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dirk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span>
                                     <span class="n">bnd_conditions</span><span class="o">=</span><span class="n">bnd_conditions</span><span class="p">,</span>
                                     <span class="n">terms_to_add</span><span class="o">=</span><span class="p">(</span><span class="s1">&#39;implicit&#39;</span><span class="p">))</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">ad_block_tag</span> <span class="o">+=</span> <span class="s1">&#39;_impl&#39;</span>
         <span class="c1"># explicit scheme</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span>
                                   <span class="n">bnd_conditions</span><span class="o">=</span><span class="n">bnd_conditions</span><span class="p">,</span>
                                   <span class="n">terms_to_add</span><span class="o">=</span><span class="p">(</span><span class="s1">&#39;explicit&#39;</span><span class="p">,</span> <span class="s1">&#39;source&#39;</span><span class="p">))</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">ad_block_tag</span> <span class="o">+=</span> <span class="s1">&#39;_expl&#39;</span>
         <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">n_stages</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">n_stages</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">n_stages</span>
         <span class="c1"># FIXME this assumes that we are limited by whatever ERK solves ...</span>
@@ -222,7 +224,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2021, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.1.2.
     </div>
   </body>
 </html>
